# cli-ocr-models

./: .gitignore  analyze_image_sizes.py  pyproject.toml
ocr_models_cli/: cli.py  config.py  ocr_engines.py
