[project]
name = "ocr-models-cli"
version = "0.1.0"
description = "CLI tool for running multiple OCR engines"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "paddlepaddle",
    "paddleocr",
    "easyocr",
    "pytesseract",
    "pillow",
    "opencv-python",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ocr_models_cli*"]

[project.scripts]
ocr-models-cli = "ocr_models_cli.cli:main"
